2004/04/04 00:52 (-0500) muppetman

	* Glib.xs: actually do work in filename_from_unicode().  thanks to
	Jan Hudec for noticing this was broken.

2004/03/23 20:20 (-0500) muppetman

	* Glib.pm, README, NEWS: stable release 1.040

2004/03/22 11:02 (-0500) muppetman

	* typemap, GBoxed.xs: use INT2PTR to hush warnings about improper
	casting on cygwin.

2004/03/19 03:35 (-0500) muppetman

	* Glib.pm, NEWS, README: 1.040 release candidate 1  (1.0391)

2004/03/17 17:09 (+0100) kaffeetisch

	* gperl.h (SvGObject_ornull): Use SvOK instead of SvTRUE.

	* gperl.h
	* typemap: Add typemaps for "const char_ornull *" and
	"char_ornull *".

2004/03/17 01:10 (-0500) muppetman

	* MakeHelper.pm: d'oh!  bad escaping makes your code not working.

2004/03/16 22:05 (-0500) muppetman

	* GMainLoop.xs, GObject.xs: bump version checks from 2.3 to 2.4; we
	don't claim to work with unstable gtk+.

2004/03/16 13:17 (-0500) muppetman

	* GUtils.xs: rename Glib::Version manpage to Glib::version, for
	consistency with other modules and the fact that it's really a
	'meta' manpage.
	
	* GUtils.xs, t/1.t: Add, document, and test Glib::GET_VERSION_INFO.

	* GenPod.pm: sort the names going into podindex, which has the effect
	of sorting the items listed in the <package>::index pod page.

2004/03/13 22:05 (-0500) muppetman

	* MakeHelper.pm: portability fixes; ask Config what make program we're
	using and generate the proper conditional syntax, lest we generate bogus
	makefiles.  we now work with Gnu Make and NMake.

2004/03/11 22:40 (-0500) muppetman

	* Glib.pm, NEWS, README, Makefile.PL: beta release 1.039

	* Glib.exports: sort the list, to make it easier to spot missing
	symbols.  add missing symbols.

	* GBoxed.xs: fix dubious logic in parameter test.

2004/03/11 21:51 (-0500) muppetman

	* README: minor fixups.

2004/03/10 11:30 (-0500) muppetman

	D Changes
	M MANIFEST
	  remove the grossly-out-of-date and unused Changes file.

2004/03/08 23:52 (-0500) muppetman

	FIXME sweep:
